--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
 	<head>
 		<title>Letter-Official</title>
-			<link rel="stylesheet" href="css/main.css" type="text/css" />
+		<link rel="stylesheet" href="css/main.css" type="text/css" />
     </head>
     <body>
 		<div class="header">
+			<div class="header-cont">
+				<form action="index.php" method="POST">
+					<input type="text" name="name" maxlength="30" placeholder="Username" class="login" />
+					<input type="password" maxlength="30" name="pwd" placeholder="Passwort" class="login" />
+					<input type="submit" value="einloggen" class="login-submit"/>
+				</form>
+			</div>
 		</div>
-		<br /><br /><br />
+		<div class="placeholder" />
 		<div class="main">
 			<div class="jumbotron">
 				<h1>Hello, world!</h1>
@@ -15,14 +22,14 @@
 				dich jetzt v&ouml;llig kostenlos und sicher </p>
 			</div>
             <p>
-            Letter ist ein soziales Netzwerk, entwickelt von 3 Jugendlichen aus Deutschland.
+            Letter ist ein soziales Netzwerk, entwickelt von 2 Jugendlichen aus Deutschland.
 			</p>
             <p> Gib uns doch einen <a href="http://www.facebook.com/pages/Letter/668067103275242?ref=hl">Like</a> wenn dir die Idee 			gef&auml;llt, um immer auf dem laufenden zu bleiben :) </p>
             <p />
             <p>Warum wir ein soziales Netzwerk ins Leben rufen wollen obwohl es ja schon sehr viele andere gibt? </p>
             <p>Ganz einfach: die meisten Plattformen, auf denen wir angemeldet sind,
 			verkaufen unsere Daten ohne weiteres weiter und sind auch nicht wirklich sicher,
-			Letter hingegen verkauft keine vertraulichen Daten an dritte was ein grosser Vorteil gegenueber den 
+			Letter hingegen verkauft keine vertraulichen Daten an dritte was ein grosser Vorteil gegen&uuml;ber den 
 			Giganten wie etwa Facebook und Twitter ist.
             </p>
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
