--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
 				<form action="index.php" method="POST">
 					<input type="text" name="name" maxlength="30" placeholder="Username" class="login" />
 					<input type="password" maxlength="30" name="pwd" placeholder="Passwort" class="login" />
-					<input type="submit" value="einloggen" class="login-submit"/>
+					<input type="text" maxlength="50" name="name" placeholder="Deine E-Mail Adresse" class="login" /> *
+					<input type="submit" value="Anmelden" class="login-submit"/>
 				</form>
 			</div>
 		</div>
 		<div class="placeholder" />
 		<div class="main">
 			<div class="jumbotron">
-				<h1>Hello, world!</h1>
-				<p>...</p>
-				<p> <a href="index.php" role="button" class="button button-blue">Registriere</a> 
-				dich jetzt v&ouml;llig kostenlos und sicher </p>
+				<h1>Herlich Willkommen bei Letter</h1>
+				<p> <a href="index.php" role="button" class="button button-blue">Melde</a> 
+				dich jetzt v&ouml;llig kostenlos und sicher fuer die Closed-Beta von Letter an und sei einer der ersten die</p>
+				<p>das neue, innovative Projekt zwei Jugendlicher aus Deutschland testen duerfen </p>				
 			</div>
-            <p>
-            Letter ist ein soziales Netzwerk, entwickelt von 2 Jugendlichen aus Deutschland.
-			</p>
-            <p> Gib uns doch einen <a href="http://www.facebook.com/pages/Letter/668067103275242?ref=hl">Like</a> wenn dir die Idee 			gef&auml;llt, um immer auf dem laufenden zu bleiben :) </p>
-            <p />
-            <p>Warum wir ein soziales Netzwerk ins Leben rufen wollen obwohl es ja schon sehr viele andere gibt? </p>
-            <p>Ganz einfach: die meisten Plattformen, auf denen wir angemeldet sind,
-			verkaufen unsere Daten ohne weiteres weiter und sind auch nicht wirklich sicher,
-			Letter hingegen verkauft keine vertraulichen Daten an dritte was ein grosser Vorteil gegen&uuml;ber den 
-			Giganten wie etwa Facebook und Twitter ist.
-            </p>
-		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-		damit du siehst, das die Kopfzeile nicht mitscrollt :)
+			
+			<div class="jumbotron">
+				<h1> Ueber uns: </h1>
+				<p>
+            	Letter ist ein soziales Netzwerk, entwickelt von 2 Jugendlichen aus Deutschland.
+            	Warum wir ein soziales Netzwerk ins Leben rufen wollen obwohl es ja schon sehr viele andere gibt?
+            	Ganz einfach: Die meisten Plattformen, auf denen wir angemeldet sind,
+				verkaufen unsere Daten ohne weiteres an dritte und sind nicht geschuetzt gegen Angriffe von Hackern, weswegen unsere persoenlichen 
+				Daten nicht sicher sind.
+				Wir haben es uns zur Aufgabe gemacht ein soziales Netzwerk zu entwickeln, welches intuitiv zu bedienen, sicher und vorallem 
+				transparent in Bezug auf die Verwendung der persoenlichen Daten unserer Nutzer ist.
+				Wenn dir unsere Idee gefaellt und du uns voellig kostenlos unterstuetzen moechtest,freuen wir uns ueber einen 
+				<ahref="http://	www.facebook.com/pages/Letter/668067103275242?ref=hl">Like</a>
+				auf unserer Facebook-Seite.
+				</p>
+					<h6>
+					* Deine E-Mail Adresse wird benoetigt um dich kostenlos fuer unsere Closed-Beta anzumelden und wird nicht an dritte verkauft oder
+					fuer etwaige Werbezwecke genutzt
+            		</h6>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
