--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 				<form action="index.php" method="POST">
 					<input type="text" name="name" maxlength="30" placeholder="Username" class="login" />
 					<input type="password" maxlength="30" name="pwd" placeholder="Passwort" class="login" />
-					<input type="text" maxlength="50" name="name" placeholder="Deine E-Mail Adresse" class="login" /> *
 					<input type="submit" value="Anmelden" class="login-submit"/>
 				</form>
 			</div>
@@ -19,29 +18,30 @@
 			<div class="jumbotron">
 				<h1>Herlich Willkommen bei Letter</h1>
 				<p> <a href="index.php" role="button" class="button button-blue">Melde</a> 
-				dich jetzt v&ouml;llig kostenlos und sicher fuer die Closed-Beta von Letter an und sei einer der ersten die</p>
-				<p>das neue, innovative Projekt zwei Jugendlicher aus Deutschland testen duerfen </p>				
+				 dich jetzt v&ouml;llig kostenlos und sicher f&uuml;r die Closed-Beta von Letter an</p>
+				<p>Sei der erste, der das neue, innovative Projekt zwei Jugendlicher 
+				aus Deutschland testen darf </p>				
 			</div>
-			
 			<div class="jumbotron">
-				<h1> Ueber uns: </h1>
+				<h1> &Uuml;ber uns: </h1>
 				<p>
             	Letter ist ein soziales Netzwerk, entwickelt von 2 Jugendlichen aus Deutschland.
             	Warum wir ein soziales Netzwerk ins Leben rufen wollen obwohl es ja schon sehr viele andere gibt?
             	Ganz einfach: Die meisten Plattformen, auf denen wir angemeldet sind,
-				verkaufen unsere Daten ohne weiteres an dritte und sind nicht geschuetzt gegen Angriffe von Hackern, weswegen unsere persoenlichen 
-				Daten nicht sicher sind.
-				Wir haben es uns zur Aufgabe gemacht ein soziales Netzwerk zu entwickeln, welches intuitiv zu bedienen, sicher und vorallem 
-				transparent in Bezug auf die Verwendung der persoenlichen Daten unserer Nutzer ist.
-				Wenn dir unsere Idee gefaellt und du uns voellig kostenlos unterstuetzen moechtest,freuen wir uns ueber einen 
-				<ahref="http://	www.facebook.com/pages/Letter/668067103275242?ref=hl">Like</a>
+				verkaufen unsere Daten ohne weiteres an dritte und sind nicht gesch&uuml;tzt gegen Angriffe von Hackern, 
+				weswegen unsere pers&ouml;nlichen Daten nicht sicher sind.
+				Wir haben es uns zur Aufgabe gemacht ein soziales Netzwerk zu entwickeln, 
+				welches intuitiv zu bedienen, sicher und vorallem 
+				transparent in Bezug auf die Verwendung der pers&ouml;nlichen Daten unserer Nutzer ist.
+				Wenn dir unsere Idee gef&auml;llt und du uns v&ouml;llig kostenlos unterst&uuml;tzen m&ouml;chtest, 
+				freuen wir uns &uuml;ber einen 
+				<a href="http://www.facebook.com/pages/Letter/668067103275242?ref=hl">Like</a>
 				auf unserer Facebook-Seite.
 				</p>
-					<h6>
-					* Deine E-Mail Adresse wird benoetigt um dich kostenlos fuer unsere Closed-Beta anzumelden und wird nicht an dritte verkauft oder
-					fuer etwaige Werbezwecke genutzt
-            		</h6>
-				</div>
+				<h6>
+					* Deine E-Mail Adresse wird ben&ouml;tigt um dich kostenlos f&uuml;r unsere Closed-Beta anzumelden 
+					und wird nicht an dritte verkauft oder f&uuml;r etwaige Werbezwecke genutzt
+            </h6>
 			</div>
 		</div>
 	</body>
