--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="placeholder" />
 		<div class="main">
 			<div class="jumbotron">
-				<h1>Herlich Willkommen bei Letter</h1>
+				<h1>Herzlich Willkommen bei Letter</h1>
 				<p> <a href="index.php" role="button" class="button button-blue">Melde</a> 
 				 dich jetzt v&ouml;llig kostenlos und sicher f&uuml;r die Closed-Beta von Letter an</p>
 				<p>Sei der erste, der das neue, innovative Projekt zwei Jugendlicher 
